@@ -762,9 +762,17 @@ REMORTMASK=-LEVEL +>60
 # property, since they can be easily transferred, are always retained.
 # Each entry can be prefixed (or suffixed) with a percentage amount
 # to keep.
-# Values include: HITPOINTS, MANA, MOVES, FACTIONS, LEVELS, ATTACK,
-# DAMAGE, SKILLS, SKILLSAT100, DEFENSE, EXPERTISES, BONUSSTATPOINTS, 
-# QUESTPOINT
+#
+# Values include: 
+#  HITPOINTS, MANA, MOVES, FACTIONS, LEVELS, ATTACK, QUESTPOINT
+#  DAMAGE, SKILLS, SKILLSAT100, DEFENSE, EXPERTISES, BONUSSTATPOINTS, 
+# 
+# SPECIAL values include:
+#  RACE to retain the existing race
+#  GENDER to retain the existing gender
+#  CHARCLASS to retain the existing character class
+#  STATS to retain the existing character stats
+#
 # Default is 100% FACTIONS, 100% QUESTPOINT
 REMORTRETAIN=100% FACTIONS, 100% QUESTPOINT
 
